# cw721-soulbound

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: schema.rs
src/: contract_tests.rs  execute.rs  helpers.rs  msg.rs  query.rs  state.rs
