[package]
name = "cw721-base-soulbound"
version = "1.0.2"
edition = "2021"
description = "Basic implementation of soulbound cw721 NFTs"
authors = ["Drew Taylor <drew.taylor@philabs.xyz>"]
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  -e CARGO_TERM_COLOR=always \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.15.1
"""

[dependencies]
cw-utils = "0.14"
cw2 = "0.14"
cw721-soulbound = { path = "./packages/cw721-soulbound", version = "1.0.2" }
cw-storage-plus = "0.14"
cosmwasm-std = { version = "^1.0.0" }
schemars = "0.8.10"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
